// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Classic Header Snapshots renders editable props properly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 580px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  padding-left: 20px;
  padding-right: 20px;
}

.c1 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 32px;
  line-height: 38px;
  padding-bottom: 30px;
  text-align: left;
}

.c3 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
}

.c5 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 26px;
}

.c6 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  color: #666;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  line-height: 1em;
  margin-top: 5px;
}

.c9 {
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-left: 7px;
  padding-right: 7px;
}

.c9:hover {
  opacity: 0.6;
}

.c9:first-child {
  padding-left: 0;
}

.c4 {
  text-align: left;
  display: block;
}

.c4 .c7 {
  display: inline-block;
}

.c2 {
  max-width: 580px;
  width: 100%;
  margin: 0 auto;
  padding-bottom: 30px;
  font-style: italic;
  text-align: left;
}

.c2 p {
  margin: 0;
}

@media screen and (min-width:40em) {
  .c0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    max-width: 900px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    font-size: 44px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    line-height: 50px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    text-align: center;
  }
}

@media screen and (min-width:40em) {
  .c4 {
    text-align: center;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
    fontSize={
      Array [
        "32px",
        "44px",
      ]
    }
    style={Object {}}
  >
    <div>
      Child 
      Title
    </div>
  </div>
  <div
    className="c2 c3"
    fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
    fontSize="18px"
    style={Object {}}
  >
    <div>
      Child 
      Lead Paragraph
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
      fontFamily={
        Object {
          "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "fontWeight": 500,
        }
      }
      fontSize="16px"
      style={Object {}}
    >
      Joanne Artman Gallery
    </div>
    <div
      className="c6"
      color="#666"
      fontFamily={
        Object {
          "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "fontWeight": 500,
        }
      }
      fontSize="14px"
      style={Object {}}
    >
      Jun 19, 2015 9:09am
    </div>
    <div
      className="c7 c8"
    >
      <a
        className="c9"
        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fjoanne-artman-gallery-poetry-naturerefinement-form"
        onClick={[Function]}
        target="_blank"
      >
        <svg
          height="14px"
          version="1.1"
          viewBox="0 0 14 14"
          width="14px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M13.22846,-0.00014 L0.77266,-0.00014 C0.34566,-0.00014 -0.00014,0.34636 -0.00014,0.77266 L-0.00014,13.22706 C-0.00014,13.65336 0.34566,13.99986 0.77266,13.99986 L7.47866,13.99986 L7.47866,8.57836 L5.65376,8.57836 L5.65376,6.46576 L7.47866,6.46576 L7.47866,4.90686 C7.47866,3.09876 8.58256,2.11456 10.19606,2.11456 C10.74066,2.11246 11.28526,2.14046 11.82706,2.19786 L11.82706,4.08576 L10.70776,4.08576 C9.83066,4.08576 9.65846,4.50366 9.65846,5.11476 L9.65846,6.46366 L11.75146,6.46366 L11.47846,8.57696 L9.65986,8.57696 L9.65986,13.99986 L13.22776,13.99986 C13.65406,13.99986 13.99986,13.65406 13.99986,13.22706 L13.99986,0.77266 C13.99986,0.34636 13.65406,-0.00014 13.22776,-0.00014"
              fill="black"
            />
          </g>
        </svg>
      </a>
      <a
        className="c9"
        href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fjoanne-artman-gallery-poetry-naturerefinement-form&text=New Study of Yale Grads Shows the Gender Pay Gap for Artists Is Not So Simple&url=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fjoanne-artman-gallery-poetry-naturerefinement-form&via=artsy"
        onClick={[Function]}
        target="_blank"
      >
        <svg
          height="14px"
          version="1.1"
          viewBox="0 0 16 14"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M15.9786472,1.9961647 C15.3802193,2.26166928 14.7456495,2.43612386 14.0957888,2.51257805 C14.7810964,2.1018105 15.2933396,1.45542502 15.537298,0.69435824 C14.8936926,1.07732426 14.189619,1.34699907 13.4542686,1.49087197 C12.8342946,0.828500604 11.967582,0.45318 11.0598622,0.45318 C9.25067784,0.458740305 7.78762253,1.92735593 7.78831756,3.73584521 C7.78762253,3.98744902 7.81542405,4.23835779 7.87033207,4.48370626 C5.23335731,4.35095397 2.77639743,3.10475056 1.11108601,1.05577808 C0.819169985,1.55620555 0.665566552,2.1254418 0.666261591,2.70510362 C0.664871514,3.80256887 1.21256158,4.82775015 2.12653675,5.4352135 C1.60595318,5.42061769 1.09649021,5.28021999 0.642630293,5.02583602 L0.642630293,5.06684327 C0.639155103,6.62859401 1.74009554,7.97488291 3.27195963,8.28139474 C2.99116422,8.36062909 2.70063827,8.40163634 2.40941728,8.40302642 C2.20229591,8.40372145 1.99517454,8.38426039 1.7922234,8.34603329 C2.22106194,9.68120158 3.45127948,10.5958718 4.85317144,10.6229783 C3.69315276,11.5362584 2.25928904,12.0311256 0.783028001,12.0283454 C0.520998616,12.0283454 0.25966427,12.0130546 -0.00028,11.9810828 C1.49961234,12.9437107 3.24554818,13.4552588 5.02762601,13.4531737 C11.0612522,13.4531737 14.3585132,8.45584932 14.3585132,4.12298146 C14.3585132,3.9798036 14.3585132,3.83940589 14.3473926,3.69970322 C14.9896079,3.23611277 15.5442483,2.66201126 15.9855976,2.00311509"
              fill="black"
            />
          </g>
        </svg>
      </a>
      <a
        className="c9"
        href="mailto:?subject=New Study of Yale Grads Shows the Gender Pay Gap for Artists Is Not So Simple&body=Check out New Study of Yale Grads Shows the Gender Pay Gap for Artists Is Not So Simple on Artsy: https://www.artsy.net/article/joanne-artman-gallery-poetry-naturerefinement-form"
        onClick={[Function]}
        target="_blank"
      >
        <svg
          height="14px"
          version="1.1"
          viewBox="0 0 17 14"
          width="17px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M8.09330005,8.15962873 L16.0866701,1.92619024 L16.0866701,1.14909566 C16.0866701,0.764718818 15.7752762,0.45402 15.3915944,0.45402 L0.795005656,0.45402 C0.411323894,0.45402 0.09993,0.764718818 0.09993,1.14909566 L0.09993,1.92619024 L8.09330005,8.15962873 Z M16.0866701,3.68820703 L16.0866701,12.7589443 C16.0866701,13.1426261 15.7752762,13.45402 15.3915944,13.45402 L0.795005656,13.45402 C0.411323894,13.45402 0.09993,13.1426261 0.09993,12.7589443 L0.09993,3.68820703 L7.66582852,9.58939935 C7.79163721,9.68740502 7.94246863,9.73606031 8.09330005,9.73606031 C8.24413147,9.73606031 8.39496288,9.68740502 8.52077158,9.58939935 L16.0866701,3.68820703 Z"
              fill="black"
            />
          </g>
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Classic Header Snapshots renders promoted content properly 1`] = `
Array [
  .c0 {
  max-width: 1250px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 20px;
  padding-right: 20px;
}

.c3 {
  margin-right: 20px;
  width: 100px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 20px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
}

.c7 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
}

.c10 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  padding-top: 1px;
}

.c11 {
  position: relative;
}

.c9 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  border: 2px solid;
  border-radius: 3px;
  padding-left: 20px;
  padding-right: 20px;
  height: 41px;
  -webkit-transition: 0.25s ease;
  transition: 0.25s ease;
  background-color: #FFF;
  border-color: #E5E5E5;
  color: #000;
}

.c9.loading {
  -webkit-transition: none;
  transition: none;
  background-color: transparent;
  color: transparent;
  border: 0;
  cursor: auto;
}

.c9.disabled {
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #FFF;
  pointer-events: none;
}

.c6 {
  color: #000;
  -webkit-transition: color 0.25s;
  transition: color 0.25s;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
}

.c8 {
  color: #000;
  -webkit-transition: color 0.25s;
  transition: color 0.25s;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000;
}

.c12 {
  border: 1px solid #E5E5E5;
  border-bottom-width: 0;
  width: 100%;
}

@media screen and (min-width:40em) {
  .c5 {
    font-size: 16px;
  }
}

@media screen and (min-width:40em) {
  .c5 {
    line-height: 26px;
  }
}

@media screen and (min-width:40em) {
  .c7 {
    font-size: 22px;
  }
}

@media screen and (min-width:40em) {
  .c7 {
    line-height: 32px;
  }
}

@media not all and (pointer:coarse),not all and (-moz-touch-enabled:1) {
  .c9:hover {
    background-color: #FFF;
    border-color: #000;
    color: #000;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="fresnel-container fresnel-greaterThan-xs"
          suppressHydrationWarning={false}
        >
          <a
            href="/auction/ici-benefit-auction-2019"
          >
            <img
              className="c3"
              onContextMenu={[Function]}
              src="https://d196wkiy8qx2u5.cloudfront.net?resize_to=fill&width=250&height=165&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FLp8BFIM7yd8AspTZJz-MGg%2Flarge_rectangle.jpg"
            />
          </a>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
            fontFamily={
              Object {
                "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                "fontWeight": 500,
              }
            }
            fontSize={
              Array [
                "14px",
                "16px",
              ]
            }
            style={Object {}}
          >
            <a
              className="c6"
              href="/auction/ici-benefit-auction-2019"
            >
              Promoted Content
            </a>
          </div>
          <div
            className="c7"
            fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
            fontSize={
              Array [
                "18px",
                "22px",
              ]
            }
            style={Object {}}
          >
            <a
              className="c8"
              href="/auction/ici-benefit-auction-2019"
            >
              ICI: Benefit Auction 2019
            </a>
          </div>
        </div>
      </div>
      <div
        className="fresnel-container fresnel-greaterThan-xs"
        suppressHydrationWarning={false}
      >
        <a
          href="/auction/ici-benefit-auction-2019"
        >
          <button
            className="  c9"
            height="41px"
            onClick={[Function]}
          >
            <div
              className="c10"
              fontFamily={
                Object {
                  "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                  "fontWeight": 500,
                }
              }
              fontSize="14px"
              style={Object {}}
            >
              Explore 
              Auction
            </div>
          </button>
        </a>
      </div>
      <div
        className="fresnel-container fresnel-at-xs"
        suppressHydrationWarning={false}
      >
        <a
          href="/auction/ici-benefit-auction-2019"
        >
          <svg
            className="c11"
            fill="black100"
            height="18px"
            viewBox="0 0 18 18"
            width="18px"
          >
            <title>
              Navigate right
            </title>
            <path
              d="M5.94 15.94l-.88-.88L11.12 9 5.06 2.94l.88-.88L12.88 9z"
              fillRule="evenodd"
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="c12"
      color="black60"
      width="100%"
    />
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 580px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  padding-left: 20px;
  padding-right: 20px;
}

.c1 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 32px;
  line-height: 38px;
  padding-bottom: 30px;
  text-align: left;
}

.c3 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 26px;
}

.c4 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  color: #666;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  line-height: 1em;
  margin-top: 5px;
}

.c7 {
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-left: 7px;
  padding-right: 7px;
}

.c7:hover {
  opacity: 0.6;
}

.c7:first-child {
  padding-left: 0;
}

.c2 {
  text-align: left;
  display: block;
}

.c2 .c5 {
  display: inline-block;
}

@media screen and (min-width:40em) {
  .c0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    max-width: 900px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    font-size: 44px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    line-height: 50px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    text-align: center;
  }
}

@media screen and (min-width:40em) {
  .c2 {
    text-align: center;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
      fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
      fontSize={
        Array [
          "32px",
          "44px",
        ]
      }
      style={Object {}}
    >
      <h1>
        ICI: Benefit Auction 2019 Curatorial Committee Picks
      </h1>
    </div>
    
    <div
      className="c2"
    >
      <div
        className="c3"
        fontFamily={
          Object {
            "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
            "fontWeight": 500,
          }
        }
        fontSize="16px"
        style={Object {}}
      >
        Independent Curators International
      </div>
      <div
        className="c4"
        color="#666"
        fontFamily={
          Object {
            "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
            "fontWeight": 500,
          }
        }
        fontSize="14px"
        style={Object {}}
      >
        Oct 14, 2019 2:52pm
      </div>
      <div
        className="c5 c6"
      >
        <a
          className="c7"
          href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.artsy.net%2Farticle%2Findependent-curators-international-ici-benefit-auction-2019-curatorial-committee-picks"
          onClick={[Function]}
          target="_blank"
        >
          <svg
            height="14px"
            version="1.1"
            viewBox="0 0 14 14"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <path
                d="M13.22846,-0.00014 L0.77266,-0.00014 C0.34566,-0.00014 -0.00014,0.34636 -0.00014,0.77266 L-0.00014,13.22706 C-0.00014,13.65336 0.34566,13.99986 0.77266,13.99986 L7.47866,13.99986 L7.47866,8.57836 L5.65376,8.57836 L5.65376,6.46576 L7.47866,6.46576 L7.47866,4.90686 C7.47866,3.09876 8.58256,2.11456 10.19606,2.11456 C10.74066,2.11246 11.28526,2.14046 11.82706,2.19786 L11.82706,4.08576 L10.70776,4.08576 C9.83066,4.08576 9.65846,4.50366 9.65846,5.11476 L9.65846,6.46366 L11.75146,6.46366 L11.47846,8.57696 L9.65986,8.57696 L9.65986,13.99986 L13.22776,13.99986 C13.65406,13.99986 13.99986,13.65406 13.99986,13.22706 L13.99986,0.77266 C13.99986,0.34636 13.65406,-0.00014 13.22776,-0.00014"
                fill="black"
              />
            </g>
          </svg>
        </a>
        <a
          className="c7"
          href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fwww.artsy.net%2Farticle%2Findependent-curators-international-ici-benefit-auction-2019-curatorial-committee-picks&text=ICI: Benefit Auction 2019 Curatorial Committee Picks&url=https%3A%2F%2Fwww.artsy.net%2Farticle%2Findependent-curators-international-ici-benefit-auction-2019-curatorial-committee-picks&via=artsy"
          onClick={[Function]}
          target="_blank"
        >
          <svg
            height="14px"
            version="1.1"
            viewBox="0 0 16 14"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <path
                d="M15.9786472,1.9961647 C15.3802193,2.26166928 14.7456495,2.43612386 14.0957888,2.51257805 C14.7810964,2.1018105 15.2933396,1.45542502 15.537298,0.69435824 C14.8936926,1.07732426 14.189619,1.34699907 13.4542686,1.49087197 C12.8342946,0.828500604 11.967582,0.45318 11.0598622,0.45318 C9.25067784,0.458740305 7.78762253,1.92735593 7.78831756,3.73584521 C7.78762253,3.98744902 7.81542405,4.23835779 7.87033207,4.48370626 C5.23335731,4.35095397 2.77639743,3.10475056 1.11108601,1.05577808 C0.819169985,1.55620555 0.665566552,2.1254418 0.666261591,2.70510362 C0.664871514,3.80256887 1.21256158,4.82775015 2.12653675,5.4352135 C1.60595318,5.42061769 1.09649021,5.28021999 0.642630293,5.02583602 L0.642630293,5.06684327 C0.639155103,6.62859401 1.74009554,7.97488291 3.27195963,8.28139474 C2.99116422,8.36062909 2.70063827,8.40163634 2.40941728,8.40302642 C2.20229591,8.40372145 1.99517454,8.38426039 1.7922234,8.34603329 C2.22106194,9.68120158 3.45127948,10.5958718 4.85317144,10.6229783 C3.69315276,11.5362584 2.25928904,12.0311256 0.783028001,12.0283454 C0.520998616,12.0283454 0.25966427,12.0130546 -0.00028,11.9810828 C1.49961234,12.9437107 3.24554818,13.4552588 5.02762601,13.4531737 C11.0612522,13.4531737 14.3585132,8.45584932 14.3585132,4.12298146 C14.3585132,3.9798036 14.3585132,3.83940589 14.3473926,3.69970322 C14.9896079,3.23611277 15.5442483,2.66201126 15.9855976,2.00311509"
                fill="black"
              />
            </g>
          </svg>
        </a>
        <a
          className="c7"
          href="mailto:?subject=ICI: Benefit Auction 2019 Curatorial Committee Picks&body=Check out ICI: Benefit Auction 2019 Curatorial Committee Picks on Artsy: https://www.artsy.net/article/independent-curators-international-ici-benefit-auction-2019-curatorial-committee-picks"
          onClick={[Function]}
          target="_blank"
        >
          <svg
            height="14px"
            version="1.1"
            viewBox="0 0 17 14"
            width="17px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <path
                d="M8.09330005,8.15962873 L16.0866701,1.92619024 L16.0866701,1.14909566 C16.0866701,0.764718818 15.7752762,0.45402 15.3915944,0.45402 L0.795005656,0.45402 C0.411323894,0.45402 0.09993,0.764718818 0.09993,1.14909566 L0.09993,1.92619024 L8.09330005,8.15962873 Z M16.0866701,3.68820703 L16.0866701,12.7589443 C16.0866701,13.1426261 15.7752762,13.45402 15.3915944,13.45402 L0.795005656,13.45402 C0.411323894,13.45402 0.09993,13.1426261 0.09993,12.7589443 L0.09993,3.68820703 L7.66582852,9.58939935 C7.79163721,9.68740502 7.94246863,9.73606031 8.09330005,9.73606031 C8.24413147,9.73606031 8.39496288,9.68740502 8.52077158,9.58939935 L16.0866701,3.68820703 Z"
                fill="black"
              />
            </g>
          </svg>
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`Classic Header Snapshots renders properly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 580px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  padding-left: 20px;
  padding-right: 20px;
}

.c1 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 32px;
  line-height: 38px;
  padding-bottom: 30px;
  text-align: left;
}

.c3 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
}

.c5 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 26px;
}

.c6 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  color: #666;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  line-height: 1em;
  margin-top: 5px;
}

.c9 {
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-left: 7px;
  padding-right: 7px;
}

.c9:hover {
  opacity: 0.6;
}

.c9:first-child {
  padding-left: 0;
}

.c4 {
  text-align: left;
  display: block;
}

.c4 .c7 {
  display: inline-block;
}

.c2 {
  max-width: 580px;
  width: 100%;
  margin: 0 auto;
  padding-bottom: 30px;
  font-style: italic;
  text-align: left;
}

.c2 p {
  margin: 0;
}

@media screen and (min-width:40em) {
  .c0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    max-width: 900px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    font-size: 44px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    line-height: 50px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    text-align: center;
  }
}

@media screen and (min-width:40em) {
  .c4 {
    text-align: center;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
    fontSize={
      Array [
        "32px",
        "44px",
      ]
    }
    style={Object {}}
  >
    <h1>
      New Study of Yale Grads Shows the Gender Pay Gap for Artists Is Not So Simple
    </h1>
  </div>
  <div
    className="c2 c3"
    fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
    fontSize="18px"
    style={Object {}}
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Critics were skeptical of Bambi when it was first released in 1942—what was the point, they wondered, of a cartoon that ignored fantasy in favor of naturalistic forest landscapes?</p>",
        }
      }
    />
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
      fontFamily={
        Object {
          "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "fontWeight": 500,
        }
      }
      fontSize="16px"
      style={Object {}}
    >
      Joanne Artman Gallery
    </div>
    <div
      className="c6"
      color="#666"
      fontFamily={
        Object {
          "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
          "fontWeight": 500,
        }
      }
      fontSize="14px"
      style={Object {}}
    >
      Jul 28, 2017 4:38pm
    </div>
    <div
      className="c7 c8"
    >
      <a
        className="c9"
        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fjoanne-artman-gallery-poetry-naturerefinement-form"
        onClick={[Function]}
        target="_blank"
      >
        <svg
          height="14px"
          version="1.1"
          viewBox="0 0 14 14"
          width="14px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M13.22846,-0.00014 L0.77266,-0.00014 C0.34566,-0.00014 -0.00014,0.34636 -0.00014,0.77266 L-0.00014,13.22706 C-0.00014,13.65336 0.34566,13.99986 0.77266,13.99986 L7.47866,13.99986 L7.47866,8.57836 L5.65376,8.57836 L5.65376,6.46576 L7.47866,6.46576 L7.47866,4.90686 C7.47866,3.09876 8.58256,2.11456 10.19606,2.11456 C10.74066,2.11246 11.28526,2.14046 11.82706,2.19786 L11.82706,4.08576 L10.70776,4.08576 C9.83066,4.08576 9.65846,4.50366 9.65846,5.11476 L9.65846,6.46366 L11.75146,6.46366 L11.47846,8.57696 L9.65986,8.57696 L9.65986,13.99986 L13.22776,13.99986 C13.65406,13.99986 13.99986,13.65406 13.99986,13.22706 L13.99986,0.77266 C13.99986,0.34636 13.65406,-0.00014 13.22776,-0.00014"
              fill="black"
            />
          </g>
        </svg>
      </a>
      <a
        className="c9"
        href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fjoanne-artman-gallery-poetry-naturerefinement-form&text=New Study of Yale Grads Shows the Gender Pay Gap for Artists Is Not So Simple&url=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fjoanne-artman-gallery-poetry-naturerefinement-form&via=artsy"
        onClick={[Function]}
        target="_blank"
      >
        <svg
          height="14px"
          version="1.1"
          viewBox="0 0 16 14"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M15.9786472,1.9961647 C15.3802193,2.26166928 14.7456495,2.43612386 14.0957888,2.51257805 C14.7810964,2.1018105 15.2933396,1.45542502 15.537298,0.69435824 C14.8936926,1.07732426 14.189619,1.34699907 13.4542686,1.49087197 C12.8342946,0.828500604 11.967582,0.45318 11.0598622,0.45318 C9.25067784,0.458740305 7.78762253,1.92735593 7.78831756,3.73584521 C7.78762253,3.98744902 7.81542405,4.23835779 7.87033207,4.48370626 C5.23335731,4.35095397 2.77639743,3.10475056 1.11108601,1.05577808 C0.819169985,1.55620555 0.665566552,2.1254418 0.666261591,2.70510362 C0.664871514,3.80256887 1.21256158,4.82775015 2.12653675,5.4352135 C1.60595318,5.42061769 1.09649021,5.28021999 0.642630293,5.02583602 L0.642630293,5.06684327 C0.639155103,6.62859401 1.74009554,7.97488291 3.27195963,8.28139474 C2.99116422,8.36062909 2.70063827,8.40163634 2.40941728,8.40302642 C2.20229591,8.40372145 1.99517454,8.38426039 1.7922234,8.34603329 C2.22106194,9.68120158 3.45127948,10.5958718 4.85317144,10.6229783 C3.69315276,11.5362584 2.25928904,12.0311256 0.783028001,12.0283454 C0.520998616,12.0283454 0.25966427,12.0130546 -0.00028,11.9810828 C1.49961234,12.9437107 3.24554818,13.4552588 5.02762601,13.4531737 C11.0612522,13.4531737 14.3585132,8.45584932 14.3585132,4.12298146 C14.3585132,3.9798036 14.3585132,3.83940589 14.3473926,3.69970322 C14.9896079,3.23611277 15.5442483,2.66201126 15.9855976,2.00311509"
              fill="black"
            />
          </g>
        </svg>
      </a>
      <a
        className="c9"
        href="mailto:?subject=New Study of Yale Grads Shows the Gender Pay Gap for Artists Is Not So Simple&body=Check out New Study of Yale Grads Shows the Gender Pay Gap for Artists Is Not So Simple on Artsy: https://www.artsy.net/article/joanne-artman-gallery-poetry-naturerefinement-form"
        onClick={[Function]}
        target="_blank"
      >
        <svg
          height="14px"
          version="1.1"
          viewBox="0 0 17 14"
          width="17px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <path
              d="M8.09330005,8.15962873 L16.0866701,1.92619024 L16.0866701,1.14909566 C16.0866701,0.764718818 15.7752762,0.45402 15.3915944,0.45402 L0.795005656,0.45402 C0.411323894,0.45402 0.09993,0.764718818 0.09993,1.14909566 L0.09993,1.92619024 L8.09330005,8.15962873 Z M16.0866701,3.68820703 L16.0866701,12.7589443 C16.0866701,13.1426261 15.7752762,13.45402 15.3915944,13.45402 L0.795005656,13.45402 C0.411323894,13.45402 0.09993,13.1426261 0.09993,12.7589443 L0.09993,3.68820703 L7.66582852,9.58939935 C7.79163721,9.68740502 7.94246863,9.73606031 8.09330005,9.73606031 C8.24413147,9.73606031 8.39496288,9.68740502 8.52077158,9.58939935 L16.0866701,3.68820703 Z"
              fill="black"
            />
          </g>
        </svg>
      </a>
    </div>
  </div>
</div>
`;
